--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,53 @@
 alembic==0.9.6
+APScheduler==3.5.1
+asn1crypto==0.24.0
+awsebcli==3.12.1
+bcrypt==3.1.4
+blessed==1.14.2
+botocore==1.8.22
+cement==2.8.2
+cffi==1.11.4
 click==6.7
+colorama==0.3.7
+cryptography==2.1.4
+docker-py==1.7.2
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.14
+enum34==1.1.6
 Flask==0.12.2
+Flask-Cors==3.0.3
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
+funcsigs==1.0.2
+futures==3.2.0
+idna==2.6
+ipaddress==1.0.19
 itsdangerous==0.24
 Jinja2==2.10
+jmespath==0.9.3
 Mako==1.0.7
 MarkupSafe==1.0
+MySQL-python==1.2.5
+paramiko==2.4.0
+pathspec==0.5.0
 psycopg2==2.7.3.2
+pyasn1==0.4.2
+pycparser==2.18
+PyNaCl==1.2.1
 python-dateutil==2.6.1
 python-editor==1.0.3
+pytz==2017.3
+PyYAML==3.12
 redshift-sqlalchemy==0.4.1
+requests==2.9.1
+semantic-version==2.5.0
 six==1.11.0
 SQLAlchemy==1.2.0
+sshtunnel==0.1.2
+tabulate==0.7.5
+termcolor==1.1.0
+tzlocal==1.5.1
+wcwidth==0.1.7
+websocket-client==0.46.0
 Werkzeug==0.14.1
