--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.14
 enum34==1.1.6
+facebookads==2.11.3
 Flask==0.12.2
 Flask-Cors==3.0.3
 Flask-Migrate==2.1.1
